--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,18 @@
-set mouse on
 
+# Make the mouse work properly
+set -g mouse on
+# This is replaced by tmux-better-mouse-mode
+#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+#bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+
+set-window-option -g xterm-keys on
 
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
