Cleaned up tmux conf a little

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,12 @@
+# tmux conf
+# Mouse is enabled with some general fixes
+# Logging is added to act as a script replacement
+# prefix + alt + shift + p works to save the current pane to file
+# prefix + shift + p toggles logging
+
 
 # Make the mouse work properly
 set -g mouse on
-# This is replaced by tmux-better-mouse-mode
-#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-#bind -n WheelDownPane select-pane -t= \; send-keys -M
-
 
 set-window-option -g xterm-keys on
 
@@ -13,6 +15,7 @@ set-window-option -g xterm-keys on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-logging'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
