removed yank, doesn't seem to be intuitive

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # tmux conf
 # Mouse is enabled with some general fixes
+# Hold shift to copy and paste like you normally would
 # Logging is added to act as a script replacement
 # prefix + alt + shift + p works to save the current pane to file
 # prefix + shift + p toggles logging
