actually it's fine

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # tmux conf
 # Mouse is enabled with some general fixes
-# Hold shift to copy and paste like you normally would
+# Select automatically copies - comment out tmux-yank to disable this
 # Logging is added to act as a script replacement
 # prefix + alt + shift + p works to save the current pane to file
 # prefix + shift + p toggles logging
@@ -18,6 +18,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
