updated to show people :)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,13 +2,13 @@
 # Mouse is enabled with some general fixes
 # Select automatically copies - comment out tmux-yank to disable this
 # Logging is added to act as a script replacement
-# prefix + alt + shift + p works to save the current pane to file
-# prefix + shift + p toggles logging
+# prefix + alt + shift + p screenshots the current pane
+# prefix + alt + c saves the pane's entire history
+# prefix + shift + p toggles logging. This is similar to script, I don't recommend this as it has bugs with the real-time clock
 
 
 # Make the mouse work properly
 set -g mouse on
-
 set-window-option -g xterm-keys on
 
 
@@ -19,6 +19,7 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-open'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
